--- a/GamingSite.css
+++ b/GamingSite.css
@@ -1,8 +1,12 @@
 body{
     background-color: black !important;
 }
+  @import url('https://fonts.googleapis.com/css2?family=Climate+Crisis&display=swap');
 
 /* header style */
+.nav-one{
+ background-color: rgb(90, 89, 89);
+}
 .navbar-brand1{
     width: 90px;
     height: 35px;
@@ -13,28 +17,34 @@ body{
 
 /* home style */
 h1{
-    color: rgb(39, 13, 152);
-    /* font-style:serif !important; */
+    color:  blue !important;
     font-family: 'Koulen', cursive !important;
     font-size: 70PX !important;
     font-weight: bolder;
-    padding-bottom: 10%;
+    padding-bottom: 5%;
+}
+h2{
+    font-family: 'Climate Crisis', cursive;
+}
+h3{
+    font-family: 'Climate Crisis', cursive;
 }
 .btn-style-h1{
-    border: 2px solid blue !important;
+    border: 2px solid rgb(0, 0, 0) !important;
     color: black !important;
     font-weight: bolder !important;
     border-radius: 50px !important;
-    background-color: white !important;
+    background-color: blue !important;
 }
 .btn-style-h1:hover{
-   background-color: blue !important;
+   background-color: rgb(0, 0, 0) !important;
+   color: white !important;
    align-items: center !important;
 }
 
 /* card style */
 .card{
-background-color: rgba(183, 178, 178, 0.499);
+background-color: rgb(90, 89, 89);
 margin-top: 10px !important;
 padding-top: 10px !important;
 }
