--- a/GamingSite.css
+++ b/GamingSite.css
@@ -1,93 +1,103 @@
-body{
-    background-color: black !important;
+body {
+  background-color: black !important;
 }
-  @import url('https://fonts.googleapis.com/css2?family=Climate+Crisis&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Climate+Crisis&display=swap');
 
 /* header style */
-.nav-one{
- background-color: rgb(90, 89, 89);
+.nav-one {
+  background-color: rgb(44, 44, 91);
 }
-.navbar-brand1{
-    width: 90px;
-    height: 35px;
+.navbar-brand1 {
+  width: 90px;
+  height: 35px;
 }
-.p-header-1{
-    margin-bottom: 0px !important;
+.p-header-1 {
+  margin-bottom: 0px !important;
 }
 
 /* home style */
-h1{
-    color:  blue !important;
-    font-family: 'Koulen', cursive !important;
-    font-size: 70PX !important;
-    font-weight: bolder;
-    padding-bottom: 5%;
+h1 {
+  color: blue !important;
+  font-family: 'Koulen', cursive !important;
+  font-size: 70px !important;
+  font-weight: bolder;
+  padding-bottom: 5%;
 }
-h2{
-    font-family: 'Climate Crisis', cursive;
+h2 {
+  font-family: 'Climate Crisis', cursive;
 }
-h3{
-    font-family: 'Climate Crisis', cursive;
+h3 {
+  font-family: 'Climate Crisis', cursive;
 }
-.btn-style-h1{
-    border: 2px solid rgb(0, 0, 0) !important;
-    color: black !important;
-    font-weight: bolder !important;
-    border-radius: 50px !important;
-    background-color: blue !important;
+.btn-style-h1 {
+  border: 2px solid rgb(0, 0, 0) !important;
+  color: black !important;
+  font-weight: bolder !important;
+  border-radius: 50px !important;
+  background-color: blue !important;
 }
-.btn-style-h1:hover{
-   background-color: rgb(0, 0, 0) !important;
-   color: white !important;
-   align-items: center !important;
+.btn-style-h1:hover {
+  background-color: rgb(0, 0, 0) !important;
+  color: white !important;
+  align-items: center !important;
 }
 
 /* card style */
-.card{
-background-color: rgb(90, 89, 89);
-margin-top: 10px !important;
-padding-top: 10px !important;
+.card {
+  background-color: rgb(90, 89, 89);
+  margin-top: 10px !important;
+  padding-top: 10px !important;
 }
-.card-title{
-    color: black !important;
+.card-title {
+  color: black !important;
 }
-.card-img-top{
-    border-radius: 50% !important;
-    width: 300px !important;
-    height: 300px !important;
-     transition: transform 0.1s ease-in-out 0s;
+.card-img-top {
+  border-radius: 50% !important;
+  width: 300px !important;
+  height: 300px !important;
+  transition: transform 0.1s ease-in-out 0s;
 }
-.card-img-top:hover{
-    transform: scale(1.08);
-    opacity: 0.7;
+.card-img-top:hover {
+  transform: scale(1.08);
+  opacity: 0.7;
 }
-.btn-card{
-    align-items: center !important;
+.btn-card {
+  align-items: center !important;
 }
 
 /* footer style */
-.footer-section{
-    background-color: rgba(1, 1, 1, 0.705) !important;
+.footer-section {
+  background-color: rgba(1, 1, 1, 0.705) !important;
 }
- .btn-floating:hover{
-    background-color: black !important;
- }
-
-
+.btn-floating:hover {
+  background-color: black !important;
+}
 
 @media screen and (max-width: 991px) {
-    .card-img-top{
+  .card-img-top {
     width: 200px !important;
     height: 200px !important;
-}
+  }
 }
 @media screen and (max-width: 768px) {
-  h1{
-    font-size: 50PX !important;
+  h1 {
+    font-size: 50px !important;
     padding-bottom: 2%;
-}
-.card-img-top{
+  }
+  .card-img-top {
     width: 300px !important;
     height: 300px !important;
+  }
 }
+
+#intro-video-container {
+}
+#intro-video-container video {
+  /* position: absolute; */
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: scale-down;
+  z-index: -1;
 }
