--- a/GamingSite.css
+++ b/GamingSite.css
@@ -1,11 +1,11 @@
 body {
-  background-color: black !important;
+  background-color: var(--black) !important;
 }
 @import url('https://fonts.googleapis.com/css2?family=Climate+Crisis&display=swap');
 
 /* header style */
 .nav-one {
-  background-color: rgb(44, 44, 91);
+  background-color: var(--gray);
 }
 .navbar-brand1 {
   width: 90px;
@@ -30,26 +30,26 @@ h3 {
   font-family: 'Climate Crisis', cursive;
 }
 .btn-style-h1 {
-  border: 2px solid rgb(0, 0, 0) !important;
-  color: black !important;
+  border: 2px var(--black) !important;
+  color: var(--black) !important;
   font-weight: bolder !important;
   border-radius: 50px !important;
   background-color: blue !important;
 }
 .btn-style-h1:hover {
-  background-color: rgb(0, 0, 0) !important;
+  background-color: var(--black) !important;
   color: white !important;
   align-items: center !important;
 }
 
 /* card style */
 .card {
-  background-color: rgb(90, 89, 89);
+  background-color: var(--gray);
   margin-top: 10px !important;
   padding-top: 10px !important;
 }
 .card-title {
-  color: black !important;
+  color: var(--black) !important;
 }
 .card-img-top {
   border-radius: 50% !important;
@@ -67,10 +67,10 @@ h3 {
 
 /* footer style */
 .footer-section {
-  background-color: rgba(1, 1, 1, 0.705) !important;
+  background-color: var(--gray) !important;
 }
 .btn-floating:hover {
-  background-color: black !important;
+  background-color: var(--black) !important;
 }
 
 @media screen and (max-width: 991px) {
@@ -100,4 +100,9 @@ h3 {
   height: 100%;
   object-fit: scale-down;
   z-index: -1;
+}
+
+:root {
+  --black: #000000;
+  --gray: #121212;
 }
