--- a/GamingSite.css
+++ b/GamingSite.css
@@ -13,6 +13,7 @@ body {
 }
 .p-header-1 {
   margin-bottom: 0px !important;
+   color: var(--white) !important;
 }
 
 /* home style */
@@ -42,6 +43,25 @@ h3 {
   align-items: center !important;
 }
 
+/* vedio */
+.vedio-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+}
+
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+
+
+
 /* card style */
 .card {
   background-color: var(--gray);
@@ -49,10 +69,19 @@ h3 {
   padding-top: 10px !important;
 }
 .card-title {
-  color: var(--black) !important;
+  /* color: var(--black) !important; */
+  color: var(--white) !important;
 }
+.playstore-icon{
+  width: 50px;
+  height: 50px;
+}
+.playstore-icon:hover{
+ opacity: 0.5;
+}
+
 .card-img-top {
-  border-radius: 50% !important;
+  border-radius: 1% !important;
   width: 300px !important;
   height: 300px !important;
   transition: transform 0.1s ease-in-out 0s;
@@ -90,8 +119,8 @@ h3 {
   }
 }
 
-#intro-video-container {
-}
+/* #intro-video-container {
+} */
 #intro-video-container video {
   /* position: absolute; */
   top: 0;
