--- a/GamingSite.css
+++ b/GamingSite.css
@@ -41,6 +41,8 @@ h3 {
   color: var(--black) !important;
   font-weight: bolder !important;
   border-radius: 50px !important;
+  width: 110px !important;
+  height: 35px !important;
   background-color: var(--white) !important;
 }
 .btn-style:hover {
@@ -65,8 +67,9 @@ h3 {
   color: var(--white) !important;
 }
 .playstore-icon{
-  width: 50px;
-  height: 50px;
+  width: 110px;
+  height: 35px;
+  border-radius: 50px !important;
 }
 .playstore-icon:hover{
  opacity: 0.5;
@@ -105,6 +108,9 @@ h3 {
    } 
    .p-para-1{
     text-align: center;
+   }
+   .playstore-icon{
+    margin-bottom: 5px !important;
    }
   }
 @media screen and (max-width: 768px) {
